subject and chapter api added
